--- a/.classpath
+++ b/.classpath
@@ -9,17 +9,17 @@
 			<accessrule kind="accessible" pattern="javafx/**"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry kind="lib" path="/usr/share/openjfx/lib/javafx.base.jar">
+	<classpathentry kind="lib" path="C:/javafx-sdk-22.0.2/lib/javafx.base.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/usr/share/openjfx/lib/javafx.controls.jar">
+	<classpathentry kind="lib" path="C:/javafx-sdk-22.0.2/lib/javafx.controls.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/usr/share/openjfx/lib/javafx.graphics.jar">
+	<classpathentry kind="lib" path="C:/javafx-sdk-22.0.2/lib/javafx.graphics.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
